# WCPG

./: .gitignore  .travis.yml  AUTHORS  COPYING  INSTALL  Makefile  Makefile.am  NEWS  README  README.md  README.rst  config.h  config.h.in  config.status  configure.ac  libtool  setup.py  tox.ini  wcpg-0.9.tar.bz2
TestProgram/: Makefile  Makefile.am  Makefile.in  testProgram  testProgram.c
TestProgram/.deps/: testProgram-testProgram.Po
TestProgram/.libs/: testProgram
TestProgram/examples/: eigen_example.txt
WCPG/: Makefile  Makefile.am  Makefile.in  Valeurs_propres.txt  Vecteurs_propres.txt  _wcpg.h  a.out  aux_funcs.c  clapack_functions_config.c  clapack_functions_config.h  clapack_linalg.c  clapack_linalg.h  glue_conversions.c  glue_conversions.h  inclusion_verif.c  inclusion_verif.h  libwcpg.la  libwcpg_la-aux_funcs.lo  libwcpg_la-clapack_functions_config.lo  libwcpg_la-clapack_linalg.lo  libwcpg_la-glue_conversions.lo  libwcpg_la-inclusion_verif.lo  libwcpg_la-mpfi_matrix.lo  libwcpg_la-mpfr_eigendecomposition.lo  libwcpg_la-mpfr_linalg.lo  libwcpg_la-mpfr_matrix.lo  libwcpg_la-wcpg.lo  matrice_test.txt  mpfi_matrix.c  mpfi_matrix.h  mpfr_eigendecomposition.c  mpfr_eigendecomposition.h  mpfr_eigendecomposition.h.gch  mpfr_linalg.c  mpfr_linalg.h  mpfr_matrix.c  wcpg.c
WCPG/.deps/: libwcpg_la-aux_funcs.Plo  libwcpg_la-clapack_functions_config.Plo  libwcpg_la-clapack_linalg.Plo  libwcpg_la-glue_conversions.Plo  libwcpg_la-inclusion_verif.Plo  libwcpg_la-mpfi_matrix.Plo  libwcpg_la-mpfr_eigendecomposition.Plo  libwcpg_la-mpfr_linalg.Plo  libwcpg_la-mpfr_matrix.Plo  libwcpg_la-wcpg.Plo
WCPG/.libs/: libwcpg.lai
exampleProgram/: Makefile  Makefile.am  Makefile.in  exampleProgram  exampleProgram.c
exampleProgram/.deps/: exampleProgram-exampleProgram.Po
exampleProgram/.libs/: exampleProgram
exampleProgram/examples/: eigen_example.txt  eigen_example_hex.txt  ex_benoit.txt  ex_benoit2.txt
fixif/WCPG/: WCPG.py  __init__.py
fixif/WCPG/test/: test_WCPG.py
include/: Makefile  Makefile.am  Makefile.in  aux_funcs.h  mpfr_matrix.h  wcpg.h
sollya/: wcpg.py  wcpg_bind.c
